include/sbls.h


struct sbls_control_type {
    bool f_indexing;
    int error;
    int out;
    int print_level;
    int indmin;
    int valmin;
    int len_ulsmin;
    int itref_max;
    int maxit_pcg;
    int new_a;
    int new_h;
    int new_c;
    int preconditioner;
    int semi_bandwidth;
    int factorization;
    int max_col;
    int scaling;
    int ordering;
    real_wp_ pivot_tol;
    real_wp_ pivot_tol_for_basis;
    real_wp_ zero_pivot;
    real_wp_ static_tolerance;
    real_wp_ static_level;
    real_wp_ min_diagonal;
    real_wp_ stop_absolute;
    real_wp_ stop_relative;
    bool remove_dependencies;
    bool find_basis_by_transpose;
    bool affine;
    bool allow_singular;
    bool perturb_to_make_definite;
    bool get_norm_residual;
    bool check_basis;
    bool space_critical;
    bool deallocate_error_fatal;
    char symmetric_linear_solver[31];
    char definite_linear_solver[31];
    char unsymmetric_linear_solver[31];
    char prefix[31];
};
struct sbls_time_type {
    real_wp_ total;
    real_wp_ form;
    real_wp_ factorize;
    real_wp_ apply;
    real_wp_ clock_total;
    real_wp_ clock_form;
    real_wp_ clock_factorize;
    real_wp_ clock_apply;
};
struct sbls_inform_type {
    int status;
    int alloc_status;
    char bad_alloc[81];
    int sils_analyse_status;
    int sils_factorize_status;
    int sils_solve_status;
    int sls_analyse_status;
    int sls_factorize_status;
    int sls_solve_status;
    int uls_analyse_status;
    int uls_factorize_status;
    int uls_solve_status;
    int sort_status;
    long int factorization_integer;
    long int factorization_real;
    int preconditioner;
    int factorization;
    int d_plus;
    int rank;
    bool rank_def;
    bool perturbed;
    int iter_pcg;
    real_wp_ norm_residual;
    bool alternative;
    struct sbls_time_type time;
};
void sbls_initialize( void **data, 
                     struct sbls_control_type *control,
                     int *status );
void sbls_read_specfile( struct sbls_control_type *control, 
                        const char specfile[] );
void sbls_import( struct sbls_control_type *control,
                 void **data,
                 int *status,
                 int n,
                 int m,
                 const char H_type[], 
                 int H_ne, 
                 const int H_row[],
                 const int H_col[], 
                 const int H_ptr[],
                 const char A_type[], 
                 int A_ne, 
                 const int A_row[],
                 const int A_col[], 
                 const int A_ptr[],
                 const char C_type[], 
                 int C_ne, 
                 const int C_row[],
                 const int C_col[], 
                 const int C_ptr[] );
void sbls_reset_control( struct sbls_control_type *control,
                 void **data,
                 int *status );
void sbls_factorize_matrix( void **data,
                            int *status,
                            int n, 
                            int h_ne,
                            const real_wp_ H_val[], 
                            int a_ne,
                            const real_wp_ A_val[], 
                            int c_ne,
                            const real_wp_ C_val[], 
                            const real_wp_ D[] );
void sbls_solve_system( void **data,
                        int *status,
                        int n, 
                        int m, 
                        real_wp_ sol[] );
void sbls_information( void **data,
                      struct sbls_inform_type *inform,
                      int *status );
void sbls_terminate( void **data, 
                    struct sbls_control_type *control, 
                    struct sbls_inform_type *inform );